--- a/decider.css
+++ b/decider.css
@@ -5,7 +5,8 @@
 }
 
 
-body {
+
+k;body {
 	background-image: linear-gradient(45deg, #7175da, #9790F2);
 	font-family: 'Muli', sans-serif;
 	display: flex;
